--- a/style/style.css
+++ b/style/style.css
@@ -3,6 +3,12 @@
 body {
     margin: 0;
     padding: 0;
+    font-family: "Montserrat";
+}
+
+a{
+    text-decoration: none;
+    color: inherit;
 }
 
 .background {
@@ -16,6 +22,117 @@ body {
     background: -webkit-radial-gradient(center, ellipse cover, #edf3f8 1%, #dee3e8 100%);
     background: radial-gradient(ellipse at center, #edf3f8 1%, #dee3e8 100%);
  }
+
+ .section{
+    width: 100%;
+    margin: 0rem 0px 1rem 0px;
+ }
+
+.page-container{
+    overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    background: #edf3f8;
+    background: -moz-radial-gradient(center, ellipse cover, #edf3f8 1%, #dee3e8 100%);
+    background: -webkit-radial-gradient(center, ellipse cover, #edf3f8 1%, #dee3e8 100%);
+    background: radial-gradient(ellipse at center, #edf3f8 1%, #dee3e8 100%);
+}
+
+.button-holder{
+    position: fixed;
+    width: 100%;
+    height: 4rem;
+    bottom: 0;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background: #2DA94F;
+    color: #eee;
+    font-size: 20px;
+
+}
+
+.button-holder button{
+    
+    font-size: 18px;
+    color: #eee;
+    background: transparent;
+    border: none;
+    outline: none;
+    height: 100%;
+    width: 90%;
+}
+
+.title-sec {
+    z-index: 10;
+    font-family: "Montserrat";
+    text-align: center;
+    width: 100%;
+    text-align: left;
+    margin-left: 1rem;
+}
+
+.top{
+    box-shadow: 2px 2px 10px #44444444;
+    background: #edf3f8;
+    width: 100%;
+    height: 2rem;
+    display: flex;
+    align-items: center;
+}
+
+.back-icon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: .5rem;
+}
+
+.input-feild{
+    display: grid;
+    gap: .4rem;
+    grid-template-columns: repeat(auto-fill,minmax(6rem,1fr)); 
+    width: 100%;
+}
+
+.inputdiv{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    box-shadow: 2px 2px 10px #44444444;
+    border-radius: 2px;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    -ms-border-radius: 2px;
+    -o-border-radius: 2px;
+    height: 3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+.active{
+    background: #2DA94F;
+    color: #eee;
+    font-weight: 700;
+}
+
+.inputdiv p{
+position: absolute;
+font-size: .6rem;
+}
+
+.inputdiv input{
+    opacity: 0;
+    transform: scale(15);
+    -webkit-transform: scale(15);
+    -moz-transform: scale(15);
+    -ms-transform: scale(15);
+    -o-transform: scale(15);
+}
+
 
 .title {
     z-index: 10;
@@ -88,9 +205,33 @@ body {
     fill: #ED412D;
 }
 
+.button{
+    padding: 10px 20px;
+    background: #2DA94F;
+    color: #edf3f8;
+    font-weight: 700;
+    text-decoration: none;
+    box-shadow: 0px 3px 5px #44444444;
+    border-radius: 5px;
+    transform: scale(.7);
+    -webkit-transform: scale(.7);
+    -moz-transform: scale(.7);
+    -ms-transform: scale(.7);
+    -o-transform: scale(.7);
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+
 svg {
    height: 30vw;
    width: 30vw;
+}
+
+.bobing-icon{
+    animation: bop 1s ease-in-out infinite alternate both;
+    -webkit-animation: bop 1s ease-in-out infinite alternate both;
 }
 
 .animation-1 {
@@ -127,6 +268,19 @@ svg {
     width: 100%;
     height: 100%;
 }
+
+
+
+@keyframes bop {
+    0%{
+      margin-left: -10px;
+  }
+ 
+  
+    100%{
+      margin-left: 10px;
+    }
+  }
 
 @keyframes animation-1 {
   0%{
@@ -266,3 +420,5 @@ svg {
       margin-left: 10px;
     }
   }
+
+  
